--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -52,9 +52,10 @@ jobs:
           ${{ runner.os }}-go-
 
     # Install the latest release of ko
-    - name: Install ko
-      uses: ko-build/setup-ko@v0.6
-
+    # - name: Install ko
+    #   uses: ko-build/setup-ko@v0.6
+    - uses: imjasonh/setup-ko@v0.6
+     
     - name: Setup Registry
       run: |
         docker run -d --restart=always \
