test only kourier

--- a/.github/workflows/kind-e2e.yaml
+++ b/.github/workflows/kind-e2e.yaml
@@ -298,7 +298,9 @@ jobs:
           ${{ runner.os }}-go-
 
     # Install the latest release of ko
-    - uses: imjasonh/setup-ko@v0.6
+    #- uses: imjasonh/setup-ko@v0.6
+    - name: Install ko
+      uses: ko-build/setup-ko@v0.6
 
     - name: Setup Registry
       run: |
@@ -340,9 +342,9 @@ jobs:
 
         ingress:
           - kourier
-          - kourier-tls
-          - istio
-          - contour
+          # - kourier-tls
+          # - istio
+         # - contour
         # Disabled due to consistent failures
         # - gateway_istio
 
